Add file path as a tooltip for Split tunneling apps [VPNWIN-2928]

--- a/src/Client/ProtonVPN.Client/UI/Main/Features/SplitTunneling/Controls/SplitTunnelingItemsControl.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Main/Features/SplitTunneling/Controls/SplitTunnelingItemsControl.xaml
@@ -42,7 +42,9 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
         <DataTemplate x:Key="AppSplitTunnelingItemTemplate"
                       x:DataType="splittunneling:AppSplitTunnelingItem">
             <Grid ColumnSpacing="8"
-                  Margin="0,0,0,8">
+                  Margin="0,0,0,8"
+                  Background="Transparent"
+                  ToolTipService.ToolTip="{x:Bind App.AppFilePath}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
