--- a/src/Client/ProtonVPN.Client/UI/Main/Settings/Pages/Advanced/CustomDnsServerPage.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Main/Settings/Pages/Advanced/CustomDnsServerPage.xaml
@@ -21,7 +21,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 <Page x:Class="ProtonVPN.Client.UI.Main.Settings.Pages.Advanced.CustomDnsServersPageView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:toolkit="using:CommunityToolkit.WinUI.Controls"
       xmlns:pathicons="using:ProtonVPN.Client.Common.UI.Assets.Icons.PathIcons"
@@ -92,27 +92,70 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                                 Content="{x:Bind ViewModel.Localizer.Get('Common_Actions_Add')}"
                                 AutomationProperties.AutomationId="AddButton"/>
 
-                        <ItemsRepeater Grid.Row="1"
-                                       Grid.Column="0"
-                                       Grid.ColumnSpan="2"
-                                       Margin="0,16,0,0"
-                                       ItemsSource="{x:Bind ViewModel.CustomDnsServers}"
-                                       Visibility="{x:Bind ViewModel.HasCustomDnsServers, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
-                            <ItemsRepeater.Layout>
-                                <StackLayout Spacing="8" />
-                            </ItemsRepeater.Layout>
-                            <ItemsRepeater.ItemTemplate>
+                        <ListView Grid.Row="1"
+                                  Grid.Column="0"
+                                  Grid.ColumnSpan="2"
+                                  Margin="0,16,0,0"
+                                  ItemsSource="{x:Bind ViewModel.CustomDnsServers}"
+                                  Visibility="{x:Bind ViewModel.HasCustomDnsServers, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                  CanReorderItems="{x:Bind ViewModel.IsDragDropEnabled}"
+                                  AllowDrop="{x:Bind ViewModel.IsDragDropEnabled}"
+                                  SelectionMode="None"
+                                  Style="{StaticResource GhostListViewStyle}">
+                            <ListView.ItemContainerTransitions>
+                                <TransitionCollection>
+                                    <ReorderThemeTransition/>
+                                </TransitionCollection>
+                            </ListView.ItemContainerTransitions>
+                            <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="advanced:DnsServerViewModel">
                                     <Grid ColumnSpacing="8">
                                         <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
-                                        <CheckBox Grid.Column="0"
+                                        
+                                        <pathicons:Dots Grid.Column="0"
+                                                        Margin="8,0,0,0"
+                                                        Size="Pixels16"
+                                                        VerticalAlignment="Center"
+                                                        Visibility="{x:Bind IsDragDropEnabled, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                                        AutomationProperties.AutomationId="DnsItemDragHandle"/>
+                                        
+                                        <CheckBox Grid.Column="1"
                                                   Content="{x:Bind IpAddress}"
-                                                  IsChecked="{x:Bind IsActive, Mode=TwoWay}" />
-                                        <custom:GhostButton Grid.Column="1"
+                                                  IsChecked="{x:Bind IsActive, Mode=TwoWay}" 
+                                                  AutomationProperties.AutomationId="DnsItemToggle"/>
+
+                                        <StackPanel Orientation="Horizontal" 
+                                                    Grid.Column="2" 
+                                                    BorderThickness="1"
+                                                    CornerRadius="5"
+                                                    BorderBrush="{ThemeResource BorderWeakColorBrush}">
+                                            <custom:GhostButton Command="{x:Bind MoveDnsServerUpCommand, Mode=OneTime}"
+                                                                AutomationProperties.Name="{x:Bind MoveUpTooltip}"
+                                                                ToolTipService.ToolTip="{x:Bind MoveUpTooltip}"
+                                                                AutomationProperties.AutomationId="MoveUpButton">
+                                                <custom:GhostButton.LeftIcon>
+                                                    <pathicons:ChevronUpFilled/>
+                                                </custom:GhostButton.LeftIcon>
+                                            </custom:GhostButton>
+                                            <custom:GhostButton  Command="{x:Bind MoveDnsServerDownCommand, Mode=OneTime}"
+                                                                 AutomationProperties.Name="{x:Bind MoveDownTooltip}"
+                                                                 ToolTipService.ToolTip="{x:Bind MoveDownTooltip}"
+                                                                 AutomationProperties.AutomationId="MoveDownButton">
+                                                <custom:GhostButton.LeftIcon>
+                                                    <pathicons:ChevronDownFilled/>
+                                                </custom:GhostButton.LeftIcon>
+                                            </custom:GhostButton>
+                                        </StackPanel>
+                                        
+                                        <custom:GhostButton Grid.Column="3"
                                                             Command="{x:Bind RemoveDnsServerCommand, Mode=OneTime}"
+                                                            AutomationProperties.Name="{x:Bind RemoveTooltip}"
+                                                            ToolTipService.ToolTip="{x:Bind RemoveTooltip}"
                                                             AutomationProperties.AutomationId="TrashIcon">
                                             <custom:GhostButton.LeftIcon>
                                                 <pathicons:Trash/>
@@ -120,10 +163,14 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                                         </custom:GhostButton>
                                     </Grid>
                                 </DataTemplate>
-                            </ItemsRepeater.ItemTemplate>
-                        </ItemsRepeater>
+                            </ListView.ItemTemplate>
+                        </ListView>
                     </Grid>
                 </toolkit:SettingsCard>
+
+                <TextBlock Foreground="{ThemeResource TextWeakColorBrush}"
+                           Style="{StaticResource CaptionTextBlockStyle}"
+                           Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_CustomDnsServers_Footer')}" />
             </StackPanel>
         </StackPanel>
     </custom:SettingsPageContentControl>
